# pystarter

./: .gitignore  README.md  cookiecutter.json  copier.yml
template/: .pre-commit-config.yaml  .pre-commit-config.yaml.j2  README.md.j2  pyproject.toml.j2
{{ cookiecutter.project_slug }}/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  {% if cookiecutter.use_docker %}Dockerfile{% endif %}
